# gbp-webhook

./: README.md  noxfile.py  pyproject.toml
src/gbp_webhook/: app.py  cli.py  handlers.py  server.py  systemd.py  utils.py
src/gbp_webhook/templates/: gbp-webhook.service
tests/: lib.py  test_app.py  test_cli.py  test_handlers.py  test_server.py  test_systemd.py  test_utils.py
